apps/alloy/pre-install/syslog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alloy-syslog
  namespace: alloy
  annotations:
    ignore-check.kube-linter.io/dangling-service: "pod deployed by helm chart"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: alloy
    app.kubernetes.io/name: alloy
  ipFamilyPolicy: RequireDualStack
  ipFamilies:
    - IPv4
    - IPv6
  ports:
    - name: alloy-syslog
      protocol: UDP
      port: 514
      targetPort: 514
