apps/alloy/pre-install/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alloy
  namespace: alloy
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      middlewares:
        - name: authentik
          namespace: traefik
        - name: default-headers
          namespace: traefik
      match: Host(`alloy.local.asztalos.net`)
      priority: 10
      services:
        - name: alloy
          namespace: alloy
          port: 12345
  tls:
    secretName: local-asztalos-net-tls
