apps/alloy/pre-install/ingressrouteTCP.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: alloy-syslog
  namespace: alloy
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - syslog
  routes:
    - match: HostSNI(`*`)
      priority: 35
      services:
        - name: alloy-syslog
          namespace: alloy
          port: 514
          nativeLB: true
